[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "launcher-server"
path = "src/main.rs"

[lib]
name = "common"
path = "src/lib/common.rs"

[dependencies]
cairo-rs = { version = "0.16.3", features = ["xlib"] }
cairo-sys-rs = "0.16.3"
clap = { version = "4.0.23", features = ["derive"] }
freedesktop-desktop-entry = "0.5.0"
gio = "0.16.7"
glib = "0.16.7"
libc = "0.2.138"
librsvg = { version="2.55.1", git="https://gitlab.gnome.org/GNOME/librsvg" }
pango = "0.16.3"
pangocairo = "0.16.3"
ron = "0.8.0"
serde = { version = "1.0.151", features = ["derive"] }
strsim = "0.10.0"
toml = "0.5.10"
x11 = "2.19.1"
